--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "hooks-sinhvien",
-  "version": "0.1.0",
-  "private": true,
+  "name": "student",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "axios": "^1.5.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.2",
+    "nodemon": "^3.0.1"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start"
+    "start": "nodemon index",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nvdinh185/hooks-sinhvien.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nvdinh185/hooks-sinhvien/issues"
+  },
+  "homepage": "https://github.com/nvdinh185/hooks-sinhvien#readme"
 }
